<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/onSecondary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIENVENIDOS"
        android:layout_gravity="center"
        android:textColor="@color/Secondary"
        android:layout_margin="20dp"
        android:textSize="24dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtSplash"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtLogin"/>
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtRegistrar"/>
    <Button
        android:id="@+id/btnReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtReporte"/>
    <Button
        android:id="@+id/btnContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtContactos"/>
    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtGoogle"/>

    <Button
        android:id="@+id/btnIntents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/Primary"
        android:text="@string/txtIntentsImplicito"/>


</LinearLayout>